# org-structure

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerignore  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: b14751969714_initial.py
app/: config.py  database.py  main.py  models.py  seed.py
app/crud/: __init__.py  department.py  employee.py
app/models/: department.py  employee.py
app/routers/: departments.py  employees.py
app/schemas/: __init__.py  department.py  employee.py
tests/: conftest.py  test_departments.py  test_employees.py
